feat: add new note button to homepage

--- a/note-app-project/01-basic-app/src/routes/Home/style.scss
+++ b/note-app-project/01-basic-app/src/routes/Home/style.scss
@@ -19,4 +19,16 @@
 		font-family: 'Pacifico', cursive;
 		font-style: italic;
 	}
+
+	& &__newnote {
+		margin: 30px 0 0;
+
+		.button {
+			text-transform: uppercase;
+			font-family: 'Rubik', sans-serif;
+			max-width: 300px;
+			margin: 0 auto;
+			border-width: 4px;
+		}
+	}
 }
