feat: rewrite useNotes with firebase

--- a/note-app-project/02-app-with-firebase/src/components/Nav/style.scss
+++ b/note-app-project/02-app-with-firebase/src/components/Nav/style.scss
@@ -13,6 +13,13 @@
 		text-transform: uppercase;
 		font-weight: bold;
 	}
+
+	.navbar-brand {
+		svg {
+			height: 28px;
+			width: auto;
+		}
+	}
 }
 .navbar-logo-text {
 	text-transform: uppercase;
